--- a/Pagination.WebApi/appsettings.json
+++ b/Pagination.WebApi/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=paginationDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source = .\\SQLEXPRESS; Initial Catalog = Northwind; Integrated Security =SSPI"
   },
   "AllowedHosts": "*"
 }
